# ModelV2

./: .gitignore  .gitmodules  Collator.py  Dataset.py  Encoder.py  GroundingVQAFormatter.py  MaskDecoder.py  Model.py  VLM.py  Wandb.py  WandbOffline.py  data.py  inference.py  inferenceGlaMM.py  languageTrainer.py  main.py  ownerarchitecture.md  pyproject.toml  readme.md  scratchpad_crossfilter.py  scratchpad_crossing_lines.txt  scratchpad_infer_test.py  scratchpad_realbench.py  scratchpad_regen_overlays.py  stage-ImageToEvidences-dataset.py  stage-QuestionEvidenceToAnswer-dataset.py  suggestion.md  trainGlaMM.py  train_common.py  train_text_mask.py
data/real_data/: README.md
experiments/: README.md  filltile_ab.py  loose_gate.py  pixdec_ab.py  prompt_rewire_retrain.py  reader_mask_ab.py  reader_overfit.py  real_windows_test.py  seg_overfit.py  seg_special_ab.py  step3_pipeline_overfit.py  vision_loss_ablation.py
experiments/results/: ablation_summary.json  baseline_bce_dice.json  cldice.json  focal.json  focal_cldice.json
hybrid/: ARCHITECTURE.md  PROJECT_OVERVIEW.md  __init__.py  checkpoints.py
hybrid/data/: config.py  dataset.py  real.py
hybrid/inference/: infer.py
hybrid/model/: decoder.py  encoder.py  (+6 more)
slot_grounded/: __init__.py  inference.py  model.py  train.py
stages-vlm/: VLM.py  callback.py  data.py  inference.py  stage-ImageToEvidences-dataset.py  stage-QuestionEvidenceToAnswer-dataset.py
utils/: GLaMM.py  SAM.py  data.py  global_encoder.py  global_region_encoder.py  inference_encoders.py  lang_decoder.py  region_encoder.py  train_encoders.py
(+13 files in other folders)
