[project]
name = "ModelV2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "datasets>=4.3.0",
    "matplotlib>=3.11.0",
    "numpy<2.4",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "pyarrow<24",
    "pyrefly>=0.60.0",
    "pytorch-lightning>=2.6.5",
    "trl==0.21.0",
    "unsloth>=2026.6.8",
    "wandb>=0.27.2",
]

[tool.uv]
# uv-managed standalone Pythons are built against a different OpenSSL than the
# OS libcrypto that pyarrow loads -> segfault at `import hmac`. System only.
python-preference = "only-system"
